# pydmdeeg

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
dmdeeg/: DMD.py  __init__.py
examples/: basic_usage.py  full_demo.py
pydmdeeg/: DMD.py  __init__.py
tests/: __init__.py  test_dmd.py
